codigo/ms-curso-demo/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-curso-demo1
  namespace: sabado
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app: ms-curso-demo1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
